added open-source code link
added link to code on GitHub

--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
           </div>
         </div>
       </div>
+      <p>
+        <a href="https://github.com/cnoonan612/weather-app" target="_blank"
+          >Open-source code</a
+        >
+        by Caitlin Noonan
+      </p>
     </div>
     <script src="src/index.js"></script>
   </body>
