--- a/index.html
+++ b/index.html
@@ -57,12 +57,18 @@
             </span>
           </h2>
           <p id="temperature-description">Partly Cloudy</p>
+          <p><span id="wind-speed">4</span>mph</p>
           <h4>
             H: <span id="high-temperature">89°</span> / L:
             <span id="low-temperature">71°</span>
           </h4>
 
-          <div class="todays-emoji">☁️</div>
+          <img
+            src="https://openweathermap.org/img/wn/03d@2x.png"
+            alt="Cloudy"
+            id="icon"
+            class="todays-emoji"
+          />
 
           <br />
           <h6>5 day forecast</h6>
