--- a/index.html
+++ b/index.html
@@ -62,65 +62,24 @@
             H: <span id="high-temperature">89°</span> / L:
             <span id="low-temperature">71°</span>
           </h4>
-
           <img
             src="https://openweathermap.org/img/wn/03d@2x.png"
             alt="Cloudy"
             id="icon"
             class="todays-emoji"
           />
-
           <br />
           <h6>5 day forecast</h6>
-          <div class="row">
-            <div class="col">
-              Friday
-              <div class="emoji">☀️</div>
-              <div class="row-high">H: 86°</div>
-              <div class="row-low">L: 70°</div>
-            </div>
-            <div class="col">
-              Saturday
-              <div class="emoji">☁️</div>
-              <div class="row-high">H: 84°</div>
-              <div class="row-low">L: 71°</div>
-            </div>
-            <div class="col">
-              Sunday
-              <div class="emoji">🌩</div>
-              <span class="percentage"> 60% </span>
-              <div class="row-high">H: 84°</div>
-              <div class="row-low">L: 73°</div>
-            </div>
-            <div class="col">
-              Monday
-              <div class="emoji">🌩</div>
-              <span class="percentage"> 60% </span>
-              <div class="row-high">H: 83°</div>
-              <div class="row-low">L: 75°</div>
-            </div>
-            <div class="col">
-              Tuesday
-              <div class="emoji">⛅</div>
-              <div class="row-high">H: 90°</div>
-              <div class="row-low">L: 75°</div>
-            </div>
-            <div class="col">
-              Wednesday
-              <div class="emoji">⛅</div>
-              <div class="row-high">H: 93°</div>
-              <div class="row-low">L: 77°</div>
-            </div>
-          </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
       </div>
-      <p>
+      <small>
         <a href="https://github.com/cnoonan612/weather-app" target="_blank"
           >Open-source code</a
         >
         by Caitlin Noonan
       </p>
-    </div>
+    </small>
     <script src="src/index.js"></script>
   </body>
 </html>
