--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
                 />
               </div>
               <div class="col-2">
-                <input
+                <button
                   type="submit"
                   value="search"
                   class="search-button w-100"
-                />
+                >
+                Search
+                </button>
               </div>
               <div class="col-2">
                 <button
