--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
               </div>
               <div class="col-2">
                 <button
+                type="submit"
+                value="submit"
                   class="current-button w-100"
                   id="current-location-button"
                 >
@@ -59,10 +61,14 @@
             </span>
           </h2>
           <p id="temperature-description">Partly Cloudy</p>
-          <p><span id="wind-speed">4</span>mph</p>
+          <p>
+          <span id="humidity"></span>
+          <br>
+          <span id="wind-speed"></span>
+          </p>
           <h4>
-            H: <span id="high-temperature">89°</span> / L:
-            <span id="low-temperature">71°</span>
+            H: <span id="high-temperature"></span> / L:
+            <span id="low-temperature"></span>
           </h4>
           <img
             src="https://openweathermap.org/img/wn/03d@2x.png"
@@ -77,7 +83,7 @@
       </div>
       <small>
         <a href="https://github.com/cnoonan612/weather-app" target="_blank"
-          >Open-source code</a
+          class="github-link">Open-source code</a
         >
         by Caitlin Noonan
       </p>
